# spidar

./: LICENSE  README.md  pyproject.toml
spidar/: __init__.py  css.py  dammit.py  diagnose.py  element.py  formatter.py
spidar/builder/: __init__.py  _html5lib.py  _htmlparser.py  _lxml.py
spidar/tests/: __init__.py  test_builder.py  test_builder_registry.py  test_css.py  test_dammit.py  test_docs.py  test_element.py  test_formatter.py  test_fuzz.py  test_html5lib.py  test_htmlparser.py  test_lxml.py  test_navigablestring.py  test_pageelement.py  test_soup.py  test_tag.py  test_tree.py
