[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spidar"
version = "0.0.1"
description = "Web Scraping library"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.6.0"
authors = [
    { name = "Shariful Alam", email = "2ashariful@gmail.com" },
]
keywords = [
    "HTML",
    "XML",
    "parse",
    "soup"
]

dependencies = [
    "soupsieve >1.2",
]

[project.optional-dependencies]
html5lib = [
    "html5lib",
]
lxml = [
    "lxml",
]
chardet = [
    "chardet",
]
cchardet = [
    "cchardet",
]
charset-normalizer = [
    "charset-normalizer",
]

[project.urls]
Download = "https://github.com/shari-ful/spidar.git"
Homepage = "https://github.com/shari-ful/spidar.git"

[tool.hatch.version]
path = "spidar/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    # The module itself, and its unit tests.
    "/spidar/**/*.py",
    "/spidar/**/*.testcase",

    # Metadata.
    "/CHANGELOG",
    "/LICENSE",

    # Redundant metadata, just in case someone is depending on the
    # old filenames.
    "/COPYING.txt",
    "/NEWS.txt",

    # Scripts.
    "/test-all-versions",
    "/scripts/*.py",

]


[tool.hatch.build.targets.wheel]
include = [
    # The module itself, and its unit tests.
    "/spidar/**/*.py",
    "/spidar/**/*.testcase",   
]